# embedded-c-template

./: .travis.yml  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  build.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  cmake.yml
doc/: setup.sh
doc/doxygen/: Doxyfile  groups.dox
doc/sphinx/: conf.py  index.rst
doc/sphinx/containers/: index.rst  queue.rst
doc/sphinx/hash/: crc.rst  index.rst
include/mbed/containers/: queue.h
include/mbed/hash/: crc32lookup.h
src/mbed/containers/: queue.c
src/mbed/hash/: crc32lookup.c
test/containers/: queue.cpp
test/hash/: crc32lookup.cpp
toolchain/: clang-arm-none-eabi.cmake  clang-native.cmake  clang-x86_64-linux-gnu.cmake  gcc-arm-none-eabi.cmake
